--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://avishekkhatiwada.github.io/moviemania",
+  "homepage": "https://avishekkhatiwada.github.io/MovieMania",
   "name": "moviemania",
   "private": true,
   "version": "0.0.0",
